# MarketData

./: .gitignore  CMakeLists.txt  README.md
conan/: CMakePresets.json  conan_toolchain.cmake  conanbuild.sh  conanbuildenv-release-x86_64.sh  conandeps_legacy.cmake  conanfile.txt  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  duckdb-Target-release.cmake  duckdb-config.cmake  duckdb-release-x86_64-data.cmake  duckdbTargets.cmake
csv/: DXY.csv
include/: CandleServer.h  ConstConcepts.h  INDEX.h  Index.h  OpenDB.h  OpenDB.h]  Pattern.h  engulfing.h  get.h  marketdata.h  return.h  socket.h
src/: CandleServer.cpp  ConstConcepts.cpp  INDEX.cpp  Index.cpp  MarketData.cpp  OpenDB.cpp  USDT_Push.cpp  engulfing.cpp  get.cpp  main.cpp  return.cpp
trading_journal/: OrdinaryRange.cpp  engulfing.cpp  faixaUsual.cpp
